# MCHPRS-RoC

./: .gitignore  Cargo.toml  README.md  build.rs
FPGA/: doc.txt  release_manifest.json
FPGA/Quartus/: create_project.tcl
FPGA/Quartus/Commands/: commands.txt
FPGA/Quartus/Commands/Windows/: compile.bat  init_project.bat  program.bat
FPGA/Quartus/Verilog/: clk_div.v  components.v  parameters.vh  redstone.v  redstone.v.bak  top.v  top.v.bak  uart.v
FPGA/Quartus/Verilog/Tick/: Tick.cmp  Tick.qip  Tick.qip.bak  Tick.sip  Tick.v  Tick_0002.qip  Tick_0002.v
FPGA/config/: devices.json
FPGA/ip/: tick_clk.cmp  tick_clk.qip  tick_clk.sip  tick_clk.v
FPGA/ip/tick_clk/: tick_clk_0002.qip  tick_clk_0002.v
FPGA/src/: RoC.sdc  top.sv
FPGA/src/interface/: clk_div.sv  command_controller.sv  uart.sv
FPGA/src/redstone/: RoC.sv  components.sv  tps_clk_div.sv
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs
crates/backend/src/direct/: compile.rs  mod.rs
crates/backend/src/fpga/: assembler.rs  compiler.rs  interface.rs  linker.rs  mod.rs  node.rs
crates/blocks/src/: lib.rs
crates/blocks/src/blocks/: props.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  player.rs  server.rs
crates/core/src/roc/: fpga  (+2 more)
crates/fpga/: Cargo.toml
crates/fpga/src/: compiler.rs  interface.rs  lib.rs  scheduler.rs  serial.rs  verilog.rs
crates/redpiler/: Cargo.toml
crates/redpiler/src/: compile_graph.rs  lib.rs  redpiler_graph.rs
crates/text/src/: lib.rs
crates/world/src/: lib.rs  storage.rs
tests/: test.rs
tests/common/: mod.rs
tests/roc/: mod.rs
(+49 files in other folders)
